<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@color/bg_black"
    app:contentPadding="@dimen/_8sdp"
    android:layout_margin="@dimen/_14sdp"
    android:layout_gravity="center"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:paddingTop="@dimen/_16sdp"
        android:paddingBottom="@dimen/_16sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/helvetica_condensed_black"
            android:textStyle="bold"
            android:gravity="start"
            android:text="@string/attach_bills"
            android:textSize="28dp" />

        <TextView
            android:id="@+id/tx_take_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/take_picture"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_6sdp"
            android:paddingTop="@dimen/_4sdp"
            android:paddingBottom="@dimen/_2sdp"
            android:textSize="@dimen/_12sdp"/>


        <TextView
            android:id="@+id/tx_open_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/open_gallery"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/white"
            android:paddingTop="@dimen/_6sdp"
            android:paddingBottom="@dimen/_2sdp"
            android:textSize="@dimen/_12sdp"/>



    </LinearLayout>

</androidx.cardview.widget.CardView>