<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@color/bg_black"
    app:contentPadding="@dimen/_16sdp"
    android:layout_margin="@dimen/_8sdp"
    android:layout_gravity="center"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/_16sdp"
        android:paddingBottom="@dimen/_16sdp">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Improve Credbizz Score"
                android:textColor="@color/white"
                android:gravity="start"
                android:textSize="28dp"
                android:fontFamily="@font/helvetica_condensed_black"
                android:lineSpacingExtra="2dp"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/_8sdp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/make_payment"
                android:gravity="start|center"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:drawablePadding="@dimen/_4sdp"
                android:drawableStart="@drawable/ic_correct"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/larger_txn"
                android:gravity="start|center"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:drawablePadding="@dimen/_4sdp"
                android:drawableStart="@drawable/ic_correct"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/keep_clean"
                android:gravity="start|center"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:drawablePadding="@dimen/_4sdp"
                android:drawableStart="@drawable/ic_correct"/>

            <requestFocus/>

            <Button
                android:id="@+id/btn_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:background="@drawable/blue_btn_bg"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_regular"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:padding="@dimen/_12sdp" />
        </LinearLayout>










    </LinearLayout>

</androidx.cardview.widget.CardView>