<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_black"
    tools:context=".activities.MobileVerify">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_margin="@dimen/_8sdp">
        <androidx.cardview.widget.CardView
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:cardElevation="@dimen/_4sdp"
            app:cardCornerRadius="@dimen/_2sdp">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher" />
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_8sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_black" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tag_line"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_regular"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_margin="@dimen/_16sdp"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:contentPadding="@dimen/_1sdp"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/bg_black"
        app:cardUseCompatPadding="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/greetings_msg"
                    android:textColor="@color/white"
                    android:gravity="start"
                    android:textSize="28dp"
                    android:fontFamily="@font/helvetica_condensed_black"
                    android:textAllCaps="true"
                    android:lineSpacingExtra="2dp"
                    android:layout_marginTop="@dimen/_8sdp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_mobile_number"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:textAllCaps="true"
                    android:visibility="gone"/>
                <EditText
                    android:id="@+id/ed_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_bg"
                    android:padding="10dp"
                    android:hint="@string/hint_mobile_number"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="phone"
                    android:lines="1"
                    android:textColor="@color/grey_text_color"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:digits="0123456789"/>
                <requestFocus/>
                <Button
                    android:id="@+id/btn_done"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/verify_otp"
                    android:background="@drawable/blue_btn_bg"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:padding="@dimen/_12sdp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>