<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@color/bg_black"
    app:contentPadding="@dimen/_10sdp"
    android:layout_margin="@dimen/_14sdp"
    android:layout_gravity="center"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp">

        <TextView
            android:id="@+id/tx_txn_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/select_action"
            android:fontFamily="@font/helvetica_condensed_black"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:gravity="start"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="24dp"/>


        <RadioGroup
            android:id="@+id/rg_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_1sdp">

            <RadioButton
                android:id="@+id/rb_give"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/rb_selector"
                android:text="@string/you_gave"
                android:paddingStart="@dimen/_4sdp"
                android:textColor="@color/green"
                android:checked="true"
                android:fontFamily="@font/montserrat_regular"/>

            <RadioButton
                android:id="@+id/rb_got"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/rb_selector"
                android:textColor="@color/yellow"
                android:text="@string/you_got"
                android:layout_marginStart="@dimen/_8sdp"
                android:paddingStart="@dimen/_4sdp"
                android:fontFamily="@font/montserrat_regular"/>

        </RadioGroup>

        <TextView
            android:id="@+id/tx_payment_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="start"
            android:textSize="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_8sdp"/>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:cardCornerRadius="2dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            app:cardElevation="@dimen/_2sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tx_rupee_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rupee_symbol"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/green"
                    android:paddingStart="@dimen/_6sdp"
                    android:textSize="@dimen/_14sdp"/>


                <com.dev.credbizz.extras.EasyMoneyEditText
                    android:id="@+id/ed_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="numberDecimal"
                    android:background="@null"
                    android:lines="1"
                    android:text="0"
                    android:textColor="@color/green"
                    android:singleLine="true"
                    android:layout_gravity="center"
                    android:imeOptions="actionDone"
                    app:show_currency="false"
                    app:show_commas="true"
                    app:currency_symbol=""
                    />
            </LinearLayout>



        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tx_repayment_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repayment_str"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_8sdp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:cardCornerRadius="2dp"
            app:cardElevation="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_8sdp">


            <TextView
                android:id="@+id/tx_payment_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/green"
                android:padding="@dimen/_6sdp"
                android:drawableStart="@drawable/ic_calendar"
                android:drawableEnd="@drawable/ic_down_red_arrow"
                android:gravity="center"
                android:drawablePadding="@dimen/_4sdp"
                android:textSize="@dimen/_10sdp"/>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:cardCornerRadius="2dp"
            app:cardElevation="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_8sdp">


            <TextView
                android:id="@+id/tx_payment_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/camera_str"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/green"
                android:padding="@dimen/_6sdp"
                android:drawableStart="@drawable/ic_camera"
                android:gravity="center"
                android:drawablePadding="@dimen/_4sdp"
                android:textSize="@dimen/_10sdp"/>


        </androidx.cardview.widget.CardView>

        <CheckBox
            android:id="@+id/cb_notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/montserrat_regular"
            android:button="@drawable/cb_selector"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:paddingStart="@dimen/_4sdp"
            android:checked="false"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/ll_notify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:cardCornerRadius="2dp"
                app:cardElevation="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp">


                <TextView
                    android:id="@+id/tx_send_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/send_message"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/colorPrimary"
                    android:padding="@dimen/_6sdp"
                    android:gravity="center"
                    android:drawablePadding="@dimen/_4sdp"
                    android:textSize="@dimen/_10sdp"/>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:cardCornerRadius="2dp"
                app:cardElevation="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp">


                <TextView
                    android:id="@+id/tx_send_whatsapp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/whats_app"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/colorPrimary"
                    android:padding="@dimen/_6sdp"
                    android:gravity="center"
                    android:drawablePadding="@dimen/_4sdp"
                    android:textSize="@dimen/_10sdp"/>


            </androidx.cardview.widget.CardView>


        </LinearLayout>






        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@drawable/green_corner_bg"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_regular"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:padding="@dimen/_12sdp" />

        <include layout="@layout/txn_saved"
            android:visibility="gone"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>