<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_black"
    tools:context=".activities.Splash">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/app_name"
                    android:gravity="center"
                    android:layout_gravity="start"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/helvetica_condensed_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tag_line"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_regular" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/_16sdp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_shield"
            android:layout_gravity="center|bottom"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/secure_text"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/light_green"
            android:fontFamily="@font/montserrat_regular" />


    </LinearLayout>



</FrameLayout>